# funny-moment-capture-ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: audio_processor.py  config.py  models.py  video_editor.py
src/llm/: llm_analyzer.py  llm_factory.py
