[project]
name = "funnymomentcaptureai"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "moviepy>=2.0.0",
    "openai-whisper>=20240930",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "torch>=2.5.0",
    "torchvision",
    "torchaudio",
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cuda-runtime-cu12>=12.9.79",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
